--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -153,13 +153,13 @@
           </div>
         </div>
         <% end %>
-       <% end %>
-      </li>
+       </li>
+      <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
-      <% if item = false %>
+      <% if @items.empty?   %>
        <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
