--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,13 +25,13 @@
   
       <%# 未実装 ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
       <% if user_signed_in?    %>
-        <% if current_user = @item.user    %>
-          <%= link_to "商品の編集", item_path, method: :get, class: "item-red-btn" %>
+        <% if current_user == @item.user    %>
+          <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
           <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
         <%else%>
       <%# 未実装 商品が売れていない場合はこちらを表示しましょう %>
-         <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+          <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
         <%end%>
       <%end%>
       <%# //商品が売れていない場合はこちらを表示しましょう %>
