--- a/app/views/buy_addresses/index.html.erb
+++ b/app/views/buy_addresses/index.html.erb
@@ -12,7 +12,7 @@
           <%= @item.iname %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%=  %></p>
+          <p class='item-price-text'>¥<%= @item.price %></p>
           <p class='item-price-sub-text'><%= @item.delivery.name %></p>
         </div>
       </div>
